# DataTransmitter

./: CMakeLists.txt  README.md
include/: DataTransmitter.h  TestCase.h  TransmitTask.h  args.h
src/: CMakeLists.txt  DataTransmitter.cpp  TestCase.cpp  TrasmitTask.cpp  main.cpp
